<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#000000"
    android:padding="0dp"
    android:layout_margin="0dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_column"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_weight="1"
            android:background="#ffffff"
            android:layout_margin="1dp"
            android:gravity="center_horizontal"
            android:id="@+id/serve_stats_player_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success_action_result_column"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="#ffffff"
            android:layout_margin="1dp"
            android:width="80dp"
            android:gravity="center_horizontal"
            android:id="@+id/serve_stats_success_count"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fail_action_result_column"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="#ffffff"
            android:layout_margin="1dp"
            android:width="80dp"
            android:gravity="center_horizontal"
            android:id="@+id/serve_stats_fail_count"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regular_action_result_column"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:background="#ffffff"
        android:layout_margin="1dp"
        android:width="80dp"
        android:gravity="center_horizontal"
        android:id="@+id/serve_stats_regular_count"/>

</LinearLayout>