<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/success_action_result_label"
        android:textSize="30sp"
        android:background="#66FF66"
        android:layout_margin="10dp"
        android:id="@+id/serve_result_success_button"
        android:layout_weight="1"
        android:onClick="onSuccessResult"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/fail_action_result_label"
        android:textSize="30sp"
        android:background="#FF4444"
        android:layout_margin="10dp"
        android:id="@+id/serve_result_fail_button"
        android:layout_weight="1"
        android:onClick="onFailResult"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/regular_action_result_label"
        android:textSize="30sp"
        android:background="#DDDDDD"
        android:layout_margin="10dp"
        android:id="@+id/regular_result_fail_button"
        android:layout_weight="1"
        android:onClick="onRegularResult"/>
</LinearLayout>